# terminal-markdown-preview

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: catmode.rs  main.rs  markdown.rs  render.rs
